--- a/class-work/class02/bikepacking/index.html
+++ b/class-work/class02/bikepacking/index.html
@@ -1,7 +1,11 @@
-<!-- <h1>BikePacking</h1>
+<!DOCTYPE html>
+<head>
+    <title>BikePacking</title>
+</head>
 
-<h3>What’s bikepacking?</h3>
-
-<p>The short answer: it’s backpacking with a bike.</p>
-
-<p>Longer answer: any ride that includes an overnight stay. This could be anything from ultralight singletrack tours to fully loaded dirt road touring (e.g. on the Great Divide Mountain Bike Route).</p> -->
+<body>
+    <h1>BikePacking</h1>
+    <h3>What’s bikepacking?</h3>
+    <p>The short answer: it’s backpacking with a bike.</p>
+    <p>Longer answer: any ride that includes an overnight stay. This could be anything from ultralight singletrack tours to fully loaded dirt road touring (e.g. on the Great Divide Mountain Bike Route).</p>
+</body>
