--- a/index.html
+++ b/index.html
@@ -5,5 +5,10 @@
     </head>
     <body>
         <h1>Hello, World!</h1>
+        <img src="images/ben.jpg" alt="">
+        <h2>My name is Ben.</h2>
+        <a href="https://twitter.com/btlhart">Twitter</a>
+        <a href="https://www.facebook.com/btlhart">Facebook</a>
+        <a href="https://www.linkedin.com/in/btlhart/">Linkedin</a>
     </body>
 </html>
