--- a/class-work/class03/sunnyside/index.html
+++ b/class-work/class03/sunnyside/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 <head>
 	<title>The Sunnyside of Life</title>
 	<link href="https://fonts.googleapis.com/css?family=Josefin+Sans|Playfair+Display" rel="stylesheet">
@@ -8,16 +9,18 @@
 
 <body>
 
-<h1>Welcome to the Sunnyside of Life!</h1>
+	<h1>Welcome to the Sunnyside of Life!</h1>
 
-<!-- Image of Sunnyside (sunnyside.jpg) (What type of link is this? Absolute or Relative)-->
-<img src="sunnyside.jpg" alt="">
+	<!-- Image of Sunnyside (sunnyside.jpg) (What type of link is this? Absolute or Relative)-->
+	<img src="sunnyside.jpg" alt="">
 
-<p>Sunnyside has vibrant communities of Armenians, Romanians, Indians, Bangladeshis, Chinese, Koreans, Colombians, and Ecuadorans.</p>
+	<p>Sunnyside has vibrant communities of Armenians, Romanians, Indians, Bangladeshis, Chinese, Koreans, Colombians, and Ecuadorans.</p>
 
 
-<!-- link the word "restaurants" to eats.html -->
-<p>This diversity is reflected in Sunnyside's <a href="eats.html">restaurants</a></p>
+	<!-- link the word "restaurants" to eats.html -->
+	<p>This diversity is reflected in Sunnyside's
+		<a href="eats.html">restaurants</a>
+	</p>
 
 </html>
 
