--- a/class-work/class04/fashion-blog/index.html
+++ b/class-work/class04/fashion-blog/index.html
@@ -1,13 +1,68 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<title>Sartre's List</title>
 
-		<link href='http://fonts.googleapis.com/css?family=Lato:300,700,300italic,700italic' rel='stylesheet' type='text/css'>
-		<link rel="stylesheet" href="normalize.css">
-		<link rel="stylesheet" href="main.css">
-	</head>
+<head>
+	<title>Sartre's List</title>
 
-	<body>
-	</body>
+	<link href='http://fonts.googleapis.com/css?family=Lato:300,700,300italic,700italic' rel='stylesheet' type='text/css'>
+	<link rel="stylesheet" href="normalize.css">
+	<link rel="stylesheet" href="main.css">
+</head>
+
+<body>
+	<header>
+		<h1>Sartre’s List</h1>
+		<h2>Better-Dressed People</h2>
+		<nav>
+			<ui>
+				<li><a href="">Women’s</a></li>
+				<li><a href="">Men’s</a></li>
+				<li><a href="">On the Street</a></li>
+				<li><a href="">The Catwalk</a></li>
+				<li><a href="">AdWatch</a></li>
+				<li><a href="">About</a></li>
+			</ui>	
+		</nav>
+	</header>
+	<section>
+		<article>
+				<h4>11/12/13</h4>
+				<h3>On the Street in Brooklyn</h3>
+				<img src="/Users/btlhart/Documents/GitHub/btlhart.github.io/class-work/class04/fashion-blog/fashion_photo.jpeg">
+				<p>Cray culpa stumptown, flexitarian ex Odd Future do fugiat Wes Anderson proident 3 wolf moon officia bitters small batch. Et consequat do, nulla you probably haven’t heard of them High Life scenester. Vinyl fugiat High Life, kogi do VHS in aliqua lo-fi leggings gentrify Neutra tumblr. Odio vegan PBR, Marfa forage blue bottle try-hard readymade meggings retro delectus Echo Park. Ugh consectetur farm-to-table forage, laboris blue bottle McSweeney’s tattooed excepteur yr. Magna ut Schlitz flexitarian, vinyl craft beer proident yr forage 8-bit ethical sustainable placeat retro. Officia pickled beard, adipisicing gluten-free sint craft beer quis thundercats id 3 wolf moon fashion axe.</p>
+				<a href="">Continues...</a>
+				<hr>
+		</article>
+		<article>
+				<h4>11/11/13</h4>
+				<h3>Vintage in Vogue</h3>
+				<img src="/Users/btlhart/Documents/GitHub/btlhart.github.io/class-work/class04/fashion-blog/fashion_photo2.jpeg">
+				<p>Selfies sunt Tumblr, delectus small batch DIY umami sint. Polaroid chambray selfies McSweeney's Cosby sweater, Pitchfork tattooed assumenda Wes Anderson Blue Bottle twee Carles ennui. Nisi locavore fugiat sapiente salvia aliqua. Shoreditch kogi exercitation fashion axe. Wolf semiotics Pinterest, laboris quis master cleanse tousled small batch street art bespoke fingerstache dreamcatcher ethical labore. Dreamcatcher iPhone typewriter, tote bag four loko fanny pack master cleanse organic PBR reprehenderit actually. Craft beer drinking vinegar wayfarers, pork belly narwhal pariatur polaroid cupidatat in 8-bit distillery anim literally.</p>
+				<a href="">Continues...</a>
+				<hr>
+		</article>
+
+	</section>
+	<footer>
+		<nav>
+			<a href="">Home</a>
+			| 
+			<a href="">Women’s</a>
+			| 
+			<a href="">Men’s</a>
+			| 
+			<a href="">On the Street</a>
+			| 
+			<a href="">The Catwalk</a>
+			| 
+			<a href="">AdWatch</a>
+			| 
+			<a href="">About</a>
+			| 
+			<a href="">Tips</a>
+		</nav>
+		<h5>© 2013 Valet Industries, Inc.</h5>
+	</footer>
+</body>
+
 </html>
