--- a/homework/hw05/layout-challenge/two-column.html
+++ b/homework/hw05/layout-challenge/two-column.html
@@ -5,6 +5,11 @@
 	<link rel="stylesheet" type="text/css" href="css/two-column.css">
 </head>
 <body>
-
+	<header></header>
+	<main>
+		<section></section>
+		<aside></aside>
+	</main>
+	<footer></footer>
 </body>
 </html>
