--- a/class-work/class06/startup-matchmaker/index.html
+++ b/class-work/class06/startup-matchmaker/index.html
@@ -2,18 +2,18 @@
 <head>
 	<title>Startup Matchmaker</title>
 
-	<link href='https://fonts.googleapis.com/css?family=Oswald:700,400|Merriweather:700,700italic|Source+Sans+Pro' rel='stylesheet' type='text/css'>
+	<link href='https://fonts.googleapis.com/css?family=Oswald:700,400|Merriweather:700,700italic|Source+Sans+Pro:700,400' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
 	<header>
 		<h1>Startup Matchmaker</h1>
 		<div>
-			<a href="">Developers</a>
-			<a href="">Designers</a>
-			<a href="">How it Works</a>
-			<a href="">How it Works</a>
-			<a href="">Blog</a>
+			<a href="" class="nav-links">Developers</a>
+			<a href="" class="nav-links">Designers</a>
+			<a href="" class="nav-links">How it Works</a>
+			<a href="" class="nav-links">How it Works</a>
+			<a href="" class="nav-links">Blog</a>
 		</div>
 	</header>
 	<div>
@@ -23,27 +23,27 @@
 		<div class="white-box">
 			<h2>Meet your Match!</h2>
 			<p>Have a great idea for a product, but need help making it a reality? We’re here to help. Startup Matchmaker is the best place for designers and developers to find each other.</p>
-			<a href="">Create a Profile</a>
+			<a href="" class="btn btn-cta">Create a Profile</a>
 		</div>
 	</section>
-	<section>
-		<div>
+	<section class="discover-box">
+		<div class="discover-cards">
 			<h3>Create a Profile</h3>
 			<p>Are you a Designer? Developer? Put yourself out there so that others can find you!</p>
-			<a href="">Sign up Now</a>
+			<a href="" class="btn">Sign up Now</a>
 		</div>
-		<div>
+		<div class="discover-cards">
 			<h3>Find a Devloper</h3>
 			<p>Looking for a fantastic developer to work with on the next big thing? Look no further.</p>
-			<a href="">Start your Search</a>
+			<a href="" class="btn">Start your Search</a>
 		</div>
-		<div>
+		<div class="discover-cards">
 			<h3>Find a Designer</h3>
 			<p>Need someone who can make a product intuitive and appealing? Get ready.</p>
-			<a href="">Start your Search</a>
+			<a href="" class="btn">Start your Search</a>
 		</div>
 	</section>
-	<footer>© 2017 Startup Matchmaker. Made in NY.</footer>
+	<footer class="footer-text">© 2017 Startup Matchmaker. Made in NY.</footer>
 
 </body>
 </html>
