--- a/class-work/class09/lifetime-supply/index.html
+++ b/class-work/class09/lifetime-supply/index.html
@@ -38,6 +38,10 @@
 		
 
 		<!-- ADD A SCRIPT TAG AND POINT IT TO JQUERY CDN! -->
+		<script
+		src="http://code.jquery.com/jquery-3.2.1.min.js"
+		integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
+		crossorigin="anonymous"></script>
 		<script src="js/project.js" type="text/javascript"></script>
 	</body>
 </html>
