refactored temp converter to use one submit button

--- a/class-work/class11/temperature-converter-conditional-starter/index-pre_refactoring.html
+++ b/class-work/class11/temperature-converter-conditional-starter/index-pre_refactoring.html
@@ -13,7 +13,8 @@
       <input type="text" id="c-input" placeholder="celcius">
     </div>
     <div>
-      <button id="submit">Submit</button>
+      <button id="f-button">F > C</button>
+      <button id="c-button">C > F</button>
     </div>
     <div>
       <p id="answer"></p>
