--- a/class-work/class12/css-grid/grid-1-first-grid.html
+++ b/class-work/class12/css-grid/grid-1-first-grid.html
@@ -3,6 +3,17 @@
 <head>
   <link rel="stylesheet" href="css/basic.css">
   <style>
+
+    .container {
+      display: grid;
+      height: 100%;
+      grid-template-columns: 200px auto 200px;
+      grid-template-rows: 200px auto;
+    }
+
+
+
+
   </style>
 </head>
 
