--- a/class-work/class12/css-grid/grid-5-auto-fit-minimax.html
+++ b/class-work/class12/css-grid/grid-5-auto-fit-minimax.html
@@ -6,7 +6,7 @@
     .container {
       display: grid;
       grid-gap: 5px;
-      grid-template-columns: repeat(6, 100px);
+      grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
       grid-template-rows: repeat(2, 100px);
     }
   </style>
