--- a/class-work/class12/css-grid/grid-6-implicit-rows copy.html
+++ b/class-work/class12/css-grid/grid-6-implicit-rows copy.html
@@ -7,7 +7,11 @@
       display: grid;
       grid-gap: 5px;
       grid-template-columns: repeat(auto-fill, minmax(100px, 1fr));
-      grid-template-rows: 100px 100px;
+      /* can get rid of line 11 now
+      grid-template-rows: 100px 100px; */
+
+      /* auto rows */
+      grid-auto-rows: 100px;
     }
   </style>
 </head>
