--- a/class-work/class12/css-grid/grid-7-image-grid.html
+++ b/class-work/class12/css-grid/grid-7-image-grid.html
@@ -10,11 +10,18 @@
     grid-auto-rows: 75px;
 }
 
-.horizontal {}
+.horizontal {
+  grid-column: span 2;
+}
 
-.vertical {}
+.vertical {
+  grid-row: span 2;
+}
 
-.big {}
+.big {
+  grid-column: span 2;
+  grid-row: span 2;
+}
   </style>
 </head>
 
