--- a/class-work/class17/font-awesome-example/index.html
+++ b/class-work/class17/font-awesome-example/index.html
@@ -1,7 +1,14 @@
 <html>
 <head>
 	<title>FontAwesome Exercise</title>
+	<style>
+		.birthday {
+			color: pink;
+		}
+	</style>
 </head>
 <body>
+	<i class="fas fa-birthday-cake birthday fa-10x"></i>		
+	<script defer src="https://use.fontawesome.com/releases/v5.0.4/js/all.js"></script>
 </body>
 </html>
