--- a/class-work/class17/light-box-example/index.html
+++ b/class-work/class17/light-box-example/index.html
@@ -5,7 +5,9 @@
 </head>
 <body>
 
-	<img src="images/chicken-nose.png" alt="">
+	<a href="images/chicken-nose.png" data-lightbox="chicken-nose" data-title="Chicken Nose">
+		<img src="images/chicken-nose.png" alt="">
+	</a>
 	<img src="images/ghostly-zoots.png" alt="">
 	<img src="images/lil-mib.png" alt="">
 	<img src="images/loopy-lou.png" alt="">
