--- a/final-project/index.html
+++ b/final-project/index.html
@@ -2,21 +2,28 @@
 <html>
 
 <head>
-	<title>CSS Media Queries</title>
+	<title>Ben's Final Project</title>
 
 	<link type="text/css" rel="stylesheet" href="css/reset.css">
 	<link type="text/css" rel="stylesheet" href="css/style.css">
+
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js" type="text/javascript"></script>
+	<meta name="viewport" content="width=device-width, user-scalable=1, initial-scale=1">
 </head>
 
 <body>
-	
+<div class="bookended-content-example"></div>
+
+<h1>You don't have to choose</h1>
+<h4>"What does not get measured gets missed.” Learn more from your audience with Remesh.</h4>
+    <div id="animation-wrapper">
 	  <section id="titles">
 		
 		<div id="titles-old">
 		  <span id="focus-groups" class="title-bars">Focus Groups</span>
 		  <span id="surveys" class="title-bars">Surveys</span>
 		</div>
-		
+		 
 		<div id="titles-new">
 		  <span id="remesh" class="title-bars">Remesh</span>
 		</div>
@@ -26,20 +33,20 @@
 	  <section id="diagram">
 		
 		<div id="diagram-users">
-		  <img id="users-moderator" src="images/users-moderator.png"></img>
-		  <img id="users-participants" src="images/users-participants.png"></img>      
+		  <img id="users-moderator" src="images/users-moderator.svg"></img>
+		  <img id="users-participants" src="images/users-participants.svg"></img>      
 		</div>
 		
 		<div id="diagram-old">
-		  <img id="source-qual" src="images/source-qual.png"></img>
-		  <img id="source-quant" src="images/source-quant.png"></img>
-		  <img id="feedback-qual" src="images/feedback-qual.png" class="z-top"></img>
-		  <img id="feedback-quant" src="images/feedback-quant.png" class="z-top"></img>
+		  <img id="source-qual" src="images/source-qual.svg"></img>
+		  <img id="source-quant" src="images/source-quant.svg"></img>
+		  <img id="feedback-qual" src="images/feedback-qual.svg" class="z-top"></img>
+		  <img id="feedback-quant" src="images/feedback-quant.svg" class="z-top"></img>
 		</div>
 		
 		<div id="diagram-new">
-		  <img id="source-remesh" src="images/source-remesh.png" ></img>
-		  <img id="feedback-realtime" src="images/feedback-realtime.png" class="z-top"></img>
+		  <img id="source-remesh" src="images/source-remesh.svg" ></img>
+		  <img id="feedback-realtime" src="images/feedback-realtime.svg" class="z-top"></img>
 		</div>
 		
 	  </section>
@@ -48,59 +55,40 @@
 		
 		<div id="attributes-left">
 		  <div id="deep" class="attribute-rows">
-			<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" class="icon-spacing" width="17px" height="17px" viewBox="0 0 18 18" version="1.1">
-		<!-- Generator: Sketch 48.2 (47327) - http://www.bohemiancoding.com/sketch -->
-		<title>plus-icon</title>
-		<desc>Created with Sketch.</desc>
-		<defs/>
-		<g id="Artboard" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd" transform="translate(-56.000000, -47.000000)">
-			<path d="M69.5714286,56.2857143 L69.5714286,54.8571429 C69.5714286,54.6636895 69.5007448,54.4962805 69.359375,54.3549107 C69.2180052,54.213541 69.0505962,54.1428571 68.8571429,54.1428571 L66,54.1428571 L66,51.2857143 C66,51.0922609 65.9293162,50.9248519 65.7879464,50.7834821 C65.6465767,50.6421124 65.4791676,50.5714286 65.2857143,50.5714286 L63.8571429,50.5714286 C63.6636895,50.5714286 63.4962805,50.6421124 63.3549107,50.7834821 C63.213541,50.9248519 63.1428571,51.0922609 63.1428571,51.2857143 L63.1428571,54.1428571 L60.2857143,54.1428571 C60.0922609,54.1428571 59.9248519,54.213541 59.7834821,54.3549107 C59.6421124,54.4962805 59.5714286,54.6636895 59.5714286,54.8571429 L59.5714286,56.2857143 C59.5714286,56.4791676 59.6421124,56.6465767 59.7834821,56.7879464 C59.9248519,56.9293162 60.0922609,57 60.2857143,57 L63.1428571,57 L63.1428571,59.8571429 C63.1428571,60.0505962 63.213541,60.2180052 63.3549107,60.359375 C63.4962805,60.5007448 63.6636895,60.5714286 63.8571429,60.5714286 L65.2857143,60.5714286 C65.4791676,60.5714286 65.6465767,60.5007448 65.7879464,60.359375 C65.9293162,60.2180052 66,60.0505962 66,59.8571429 L66,57 L68.8571429,57 C69.0505962,57 69.2180052,56.9293162 69.359375,56.7879464 C69.5007448,56.6465767 69.5714286,56.4791676 69.5714286,56.2857143 Z M71.9933036,51.2745536 C72.7596765,52.5840839 73.1428571,54.0163613 73.1428571,55.5714286 C73.1428571,57.1264959 72.7596765,58.5606333 71.9933036,59.8738839 C71.2269307,61.1871345 70.1871345,62.2269307 68.8738839,62.9933036 C67.5606333,63.7596765 66.1264959,64.1428571 64.5714286,64.1428571 C63.0163613,64.1428571 61.5822238,63.7596765 60.2689732,62.9933036 C58.9557226,62.2269307 57.9159265,61.1871345 57.1495536,59.8738839 C56.3831807,58.5606333 56,57.1264959 56,55.5714286 C56,54.0163613 56.3831807,52.5822238 57.1495536,51.2689732 C57.9159265,49.9557226 58.9557226,48.9159265 60.2689732,48.1495536 C61.5822238,47.3831807 63.0163613,47 64.5714286,47 C66.1264959,47 67.5606333,47.3831807 68.8738839,48.1495536 C70.1871345,48.9159265 71.2269307,49.9575827 71.9933036,51.2745536 Z" id="plus-icon" fill="#34D321"/>
-		</g>
-	</svg>
+			<img class="icon-spacing" src="images/icon-plus.svg"></img>
 			<span>Deep qualitative understanding</span>
 		  </div>
 		  <div id="no-significant" class="attribute-rows">
-			<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" class="icon-spacing" width="17px" height="17px" viewBox="0 0 18 18" version="1.1">
-		<!-- Generator: Sketch 48.2 (47327) - http://www.bohemiancoding.com/sketch -->
-		<title>minus-icon</title>
-		<desc>Created with Sketch.</desc>
-		<defs/>
-		<g id="Artboard" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd" transform="translate(-56.000000, -104.000000)">
-			<path d="M69.5714286,113.285714 L69.5714286,111.857143 C69.5714286,111.66369 69.5007448,111.49628 69.359375,111.354911 C69.2180052,111.213541 69.0505962,111.142857 68.8571429,111.142857 L60.2857143,111.142857 C60.0922609,111.142857 59.9248519,111.213541 59.7834821,111.354911 C59.6421124,111.49628 59.5714286,111.66369 59.5714286,111.857143 L59.5714286,113.285714 C59.5714286,113.479168 59.6421124,113.646577 59.7834821,113.787946 C59.9248519,113.929316 60.0922609,114 60.2857143,114 L68.8571429,114 C69.0505962,114 69.2180052,113.929316 69.359375,113.787946 C69.5007448,113.646577 69.5714286,113.479168 69.5714286,113.285714 Z M71.9933036,108.274554 C72.7596765,109.584084 73.1428571,111.016361 73.1428571,112.571429 C73.1428571,114.126496 72.7596765,115.560633 71.9933036,116.873884 C71.2269307,118.187135 70.1871345,119.226931 68.8738839,119.993304 C67.5606333,120.759676 66.1264959,121.142857 64.5714286,121.142857 C63.0163613,121.142857 61.5822238,120.759676 60.2689732,119.993304 C58.9557226,119.226931 57.9159265,118.187135 57.1495536,116.873884 C56.3831807,115.560633 56,114.126496 56,112.571429 C56,111.016361 56.3831807,109.582224 57.1495536,108.268973 C57.9159265,106.955723 58.9557226,105.915926 60.2689732,105.149554 C61.5822238,104.383181 63.0163613,104 64.5714286,104 C66.1264959,104 67.5606333,104.383181 68.8738839,105.149554 C70.1871345,105.915926 71.2269307,106.957583 71.9933036,108.274554 Z" id="minus-icon" fill="#EF0C28"/>
-		</g>
-	</svg>
+			<img class="icon-spacing" src="images/icon-minus.svg"></img>
 			<span>No statistical significance</span>
 		  </div>
 		</div>
 		
 		<div id="attributes-right">
 		  <div id="significant" class="attribute-rows">
-			<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" class="icon-spacing" width="17px" height="17px" viewBox="0 0 18 18" version="1.1">
-		<!-- Generator: Sketch 48.2 (47327) - http://www.bohemiancoding.com/sketch -->
-		<title>plus-icon</title>
-		<desc>Created with Sketch.</desc>
-		<defs/>
-		<g id="Artboard" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd" transform="translate(-56.000000, -47.000000)">
-			<path d="M69.5714286,56.2857143 L69.5714286,54.8571429 C69.5714286,54.6636895 69.5007448,54.4962805 69.359375,54.3549107 C69.2180052,54.213541 69.0505962,54.1428571 68.8571429,54.1428571 L66,54.1428571 L66,51.2857143 C66,51.0922609 65.9293162,50.9248519 65.7879464,50.7834821 C65.6465767,50.6421124 65.4791676,50.5714286 65.2857143,50.5714286 L63.8571429,50.5714286 C63.6636895,50.5714286 63.4962805,50.6421124 63.3549107,50.7834821 C63.213541,50.9248519 63.1428571,51.0922609 63.1428571,51.2857143 L63.1428571,54.1428571 L60.2857143,54.1428571 C60.0922609,54.1428571 59.9248519,54.213541 59.7834821,54.3549107 C59.6421124,54.4962805 59.5714286,54.6636895 59.5714286,54.8571429 L59.5714286,56.2857143 C59.5714286,56.4791676 59.6421124,56.6465767 59.7834821,56.7879464 C59.9248519,56.9293162 60.0922609,57 60.2857143,57 L63.1428571,57 L63.1428571,59.8571429 C63.1428571,60.0505962 63.213541,60.2180052 63.3549107,60.359375 C63.4962805,60.5007448 63.6636895,60.5714286 63.8571429,60.5714286 L65.2857143,60.5714286 C65.4791676,60.5714286 65.6465767,60.5007448 65.7879464,60.359375 C65.9293162,60.2180052 66,60.0505962 66,59.8571429 L66,57 L68.8571429,57 C69.0505962,57 69.2180052,56.9293162 69.359375,56.7879464 C69.5007448,56.6465767 69.5714286,56.4791676 69.5714286,56.2857143 Z M71.9933036,51.2745536 C72.7596765,52.5840839 73.1428571,54.0163613 73.1428571,55.5714286 C73.1428571,57.1264959 72.7596765,58.5606333 71.9933036,59.8738839 C71.2269307,61.1871345 70.1871345,62.2269307 68.8738839,62.9933036 C67.5606333,63.7596765 66.1264959,64.1428571 64.5714286,64.1428571 C63.0163613,64.1428571 61.5822238,63.7596765 60.2689732,62.9933036 C58.9557226,62.2269307 57.9159265,61.1871345 57.1495536,59.8738839 C56.3831807,58.5606333 56,57.1264959 56,55.5714286 C56,54.0163613 56.3831807,52.5822238 57.1495536,51.2689732 C57.9159265,49.9557226 58.9557226,48.9159265 60.2689732,48.1495536 C61.5822238,47.3831807 63.0163613,47 64.5714286,47 C66.1264959,47 67.5606333,47.3831807 68.8738839,48.1495536 C70.1871345,48.9159265 71.2269307,49.9575827 71.9933036,51.2745536 Z" id="plus-icon" fill="#34D321"/>
-		</g>
-	</svg>
+			<img class="icon-spacing" src="images/icon-plus.svg"></img>
 			<span>Statistically significant quantitative insights</span>
 		  </div>
 		  <div id="no-deep" class="attribute-rows">
-			<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" class="icon-spacing" width="17px" height="17px" viewBox="0 0 17 17" version="1.1">
-		<!-- Generator: Sketch 48.2 (47327) - http://www.bohemiancoding.com/sketch -->
-		<title>minus-icon</title>
-		<desc>Created with Sketch.</desc>
-		<defs/>
-		<g id="Artboard" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd" transform="translate(-56.000000, -104.000000)">
-			<path d="M69.5714286,113.285714 L69.5714286,111.857143 C69.5714286,111.66369 69.5007448,111.49628 69.359375,111.354911 C69.2180052,111.213541 69.0505962,111.142857 68.8571429,111.142857 L60.2857143,111.142857 C60.0922609,111.142857 59.9248519,111.213541 59.7834821,111.354911 C59.6421124,111.49628 59.5714286,111.66369 59.5714286,111.857143 L59.5714286,113.285714 C59.5714286,113.479168 59.6421124,113.646577 59.7834821,113.787946 C59.9248519,113.929316 60.0922609,114 60.2857143,114 L68.8571429,114 C69.0505962,114 69.2180052,113.929316 69.359375,113.787946 C69.5007448,113.646577 69.5714286,113.479168 69.5714286,113.285714 Z M71.9933036,108.274554 C72.7596765,109.584084 73.1428571,111.016361 73.1428571,112.571429 C73.1428571,114.126496 72.7596765,115.560633 71.9933036,116.873884 C71.2269307,118.187135 70.1871345,119.226931 68.8738839,119.993304 C67.5606333,120.759676 66.1264959,121.142857 64.5714286,121.142857 C63.0163613,121.142857 61.5822238,120.759676 60.2689732,119.993304 C58.9557226,119.226931 57.9159265,118.187135 57.1495536,116.873884 C56.3831807,115.560633 56,114.126496 56,112.571429 C56,111.016361 56.3831807,109.582224 57.1495536,108.268973 C57.9159265,106.955723 58.9557226,105.915926 60.2689732,105.149554 C61.5822238,104.383181 63.0163613,104 64.5714286,104 C66.1264959,104 67.5606333,104.383181 68.8738839,105.149554 C70.1871345,105.915926 71.2269307,106.957583 71.9933036,108.274554 Z" id="minus-icon" fill="#EF0C28"/>
-		</g>
-	</svg>
+			<img class="icon-spacing" src="images/icon-minus.svg"></img>
 			<span>No deep qualitative understanding</span>
 		  </div>
 		</div>
 	  </section>
-	
+	</div>
+<div class="bookended-content-example"></div>
+
+
+
+
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.16.1/TweenMax.min.js"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.2/ScrollMagic.min.js"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.2/plugins/animation.gsap.js"></script>
+		<script src="https://codepen.io/grayghostvisuals/pen/a08e0d79c150ff5030f9b6afaa137749"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.5/plugins/debug.addIndicators.min.js"></script>
+
+		<script src="js/app.js"></script>
 	</body>
 
 </html>
