--- a/about.html
+++ b/about.html
@@ -5,7 +5,9 @@
         rel="stylesheet">
   <link href="jquery.fancybox.min.css"
         rel="stylesheet">
-  <title></title>
+  <title>Ben Hart</title>
+  <meta content="width=device-width, initial-scale=1"
+        name="viewport">
 </head>
 <body>
   <!-- Header -->
@@ -54,7 +56,7 @@
       <br>
       I love building Software, Businesses, and Experiences from conception to optimization.<br>
       <br>
-      Outside of Components, Guidelines, Code, and a good Business Model Canvas, I believe people and connection matter most.
+      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
     </div>
   </div><!-- End Content Container -->
   <!-- Image Wide -->
@@ -116,7 +118,7 @@
         To talk freelance, collaboration, or air fryers click the link below:
       </div>
       <div class="primary-btn top-24 mobile-stretch"
-           style="width: 280px;">
+           style="max-width: 280px;">
         Connect
       </div>
     </div></a>
