--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
   <link href="jquery.fancybox.min.css"
         rel="stylesheet">
   <title></title>
+  <meta content="width=device-width, initial-scale=1"
+        name="viewport">
 </head>
 <body>
   <!-- Header -->
@@ -154,7 +156,7 @@
                    style="background-image: url(images/thumbnail-prototype-01.png);"></div>
               <div class="primary-btn top-16 mobile-stretch sides-16"
                    style="width: 100%;">
-                <div class="icon icon-document"></div>View Figma Prototype
+                <div class="icon icon-document"></div>View Prototype
               </div>
             </div></a>
             <div class="work-subtitle-h2 top-16">
@@ -169,7 +171,7 @@
                    style="background-image: url(images/thumbnail-prototype-02.png);"></div>
               <div class="primary-btn top-16 mobile-stretch sides-16"
                    style="width: 100%;">
-                <div class="icon icon-document"></div>View Figma Prototype
+                <div class="icon icon-document"></div>View Prototype
               </div>
             </div></a>
             <div class="work-subtitle-h2 top-16">
