added title to index

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         rel="stylesheet">
   <link href="jquery.fancybox.min.css"
         rel="stylesheet">
-  <title></title>
+  <title>Ben Hart</title>
   <meta content="width=device-width, initial-scale=1"
         name="viewport">
 </head>
