padding, card bug, fancybox
- body side padding from 8px to 16px
- about page card bug fix
- fancy box changes

--- a/about.html
+++ b/about.html
@@ -114,11 +114,11 @@
       <div class="h1">
         Thanks for stopping by
       </div>
-      <div>
+      <div style="width: 100%; text-align: center;">
         To talk freelance, collaboration, or air fryers click the link below:
       </div>
       <div class="primary-btn top-24 mobile-stretch"
-           style="max-width: 280px;">
+           style="max-width: 280px; flex-grow: 1">
         Connect
       </div>
     </div></a>
