--- a/about.html
+++ b/about.html
@@ -112,13 +112,13 @@
          href="mailto:btlhart@gmail.com">
     <div class="card-note">
       <div class="h1">
-        Thanks for stopping by
+        Thanks for stopping&nbsp;by
       </div>
-      <div style="width: 100%; text-align: center;">
+      <div>
         To talk freelance, collaboration, or air fryers click the link below:
       </div>
       <div class="primary-btn top-24 mobile-stretch"
-           style="max-width: 280px; flex-grow: 1">
+           style="flex: 0 1 280px;">
         Connect
       </div>
     </div></a>
