about page card changes
- margin
- copy edit

--- a/about.html
+++ b/about.html
@@ -107,12 +107,12 @@
        style="width: 100%;"></div><!-- End Image Wide -->
   <!-- Content Container -->
   <div class="content-container"
-       style="padding: 64px 32px 0 32px;">
+       style="padding: 0 32px 64px 32px;">
     <a class=""
          href="mailto:btlhart@gmail.com">
     <div class="card-note">
       <div class="h1">
-        Thanks for stopping&nbsp;by
+        Thanks for stopping&nbsp;by.
       </div>
       <div>
         To talk freelance, collaboration, or air fryers click the link below:
@@ -123,9 +123,6 @@
       </div>
     </div></a>
   </div><!-- End Content Container -->
-  <div style="height: 192px;">
-    &nbsp;
-  </div>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.slim.min.js"></script> 
   <script src="jquery.fancybox.min.js"></script>
 </body>
