thumbnail margin fix

--- a/index.html
+++ b/index.html
@@ -97,47 +97,52 @@
           Design Lead for product and marketing of tech startup from conception to Series A
         </div>
         <div class="work-thumbnails top-16">
-          <a class="remesh-link"
-               data-caption="Remesh — 1"
-               data-fancybox="gallery"
-               href="images/remesh-01.png"><img alt=""
-               class="thumbnails-remesh"
-               src="images/thumbnail-remesh-01.png"></a> <a class="remesh-link"
-               data-caption="Remesh — 2"
-               data-fancybox="gallery"
-               href="images/remesh-02.png"><img alt=""
-               class="thumbnails-remesh"
-               src="images/thumbnail-remesh-02.png"></a> <a class="remesh-link"
-               data-caption="Remesh — 3"
-               data-fancybox="gallery"
-               href="images/remesh-03.png"><img alt=""
-               class="thumbnails-remesh"
-               src="images/thumbnail-remesh-03.png"></a> <a class="remesh-link"
-               data-caption="Remesh — 4"
-               data-fancybox="gallery"
-               href="images/remesh-04.png"><img alt=""
-               class="thumbnails-remesh"
-               src="images/thumbnail-remesh-04.png"></a> <a class="remesh-link"
-               data-caption="Remesh — 5"
-               data-fancybox="gallery"
-               href="images/remesh-05.png"><img alt=""
-               class="thumbnails-remesh"
-               src="images/thumbnail-remesh-05.png"></a> <a class="remesh-link"
-               data-caption="Remesh — 6"
-               data-fancybox="gallery"
-               href="images/remesh-06.png"><img alt=""
-               class="thumbnails-remesh"
-               src="images/thumbnail-remesh-06.png"></a> <a class="remesh-link"
-               data-caption="Remesh — 7"
-               data-fancybox="gallery"
-               href="images/remesh-07.png"><img alt=""
-               class="thumbnails-remesh"
-               src="images/thumbnail-remesh-07.png"></a> <a class="remesh-link"
-               data-caption="Remesh — 8"
-               data-fancybox="gallery"
-               href="images/remesh-08.png"><img alt=""
-               class="thumbnails-remesh"
-               src="images/thumbnail-remesh-08.png"></a>
+          <div style="display: flex; justify-content: inherit; width: 100%;">
+            <a class="remesh-link"
+                 data-caption="Remesh — 1"
+                 data-fancybox="gallery"
+                 href="images/remesh-01.png"><img alt=""
+                 class="thumbnails-remesh"
+                 src="images/thumbnail-remesh-01.png"></a> <a class="remesh-link"
+                 data-caption="Remesh — 2"
+                 data-fancybox="gallery"
+                 href="images/remesh-02.png"><img alt=""
+                 class="thumbnails-remesh"
+                 src="images/thumbnail-remesh-02.png"></a> <a class="remesh-link"
+                 data-caption="Remesh — 3"
+                 data-fancybox="gallery"
+                 href="images/remesh-03.png"><img alt=""
+                 class="thumbnails-remesh"
+                 src="images/thumbnail-remesh-03.png"></a> <a class="remesh-link"
+                 data-caption="Remesh — 4"
+                 data-fancybox="gallery"
+                 href="images/remesh-04.png"><img alt=""
+                 class="thumbnails-remesh"
+                 src="images/thumbnail-remesh-04.png"></a>
+          </div>
+          <div style="display: flex; justify-content: inherit; margin-top: 4%; width: 100%;">
+            <a class="remesh-link"
+                 data-caption="Remesh — 5"
+                 data-fancybox="gallery"
+                 href="images/remesh-05.png"><img alt=""
+                 class="thumbnails-remesh"
+                 src="images/thumbnail-remesh-05.png"></a> <a class="remesh-link"
+                 data-caption="Remesh — 6"
+                 data-fancybox="gallery"
+                 href="images/remesh-06.png"><img alt=""
+                 class="thumbnails-remesh"
+                 src="images/thumbnail-remesh-06.png"></a> <a class="remesh-link"
+                 data-caption="Remesh — 7"
+                 data-fancybox="gallery"
+                 href="images/remesh-07.png"><img alt=""
+                 class="thumbnails-remesh"
+                 src="images/thumbnail-remesh-07.png"></a> <a class="remesh-link"
+                 data-caption="Remesh — 8"
+                 data-fancybox="gallery"
+                 href="images/remesh-08.png"><img alt=""
+                 class="thumbnails-remesh"
+                 src="images/thumbnail-remesh-08.png"></a>
+          </div>
         </div>
         <div style="display: flex;">
           <a class="mobile-stretch top-24"
@@ -345,6 +350,15 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.slim.min.js"></script> 
   <script src="jquery.fancybox.min.js"></script> 
   <script>
+
+
+
+
+
+
+
+
+
 
 
 
