safari  bug fix

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
           Design Lead for product and marketing of tech startup from conception to Series A
         </div>
         <div class="work-thumbnails top-16">
-          <div style="display: flex; justify-content: inherit; width: 100%;">
+          <div style="display: flex; justify-content: inherit;">
             <a class="remesh-link"
                  data-caption="Remesh — 1"
                  data-fancybox="gallery"
@@ -350,6 +350,18 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.slim.min.js"></script> 
   <script src="jquery.fancybox.min.js"></script> 
   <script>
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
