--- a/about.html
+++ b/about.html
@@ -48,15 +48,12 @@
   </div><!-- End Hero -->
   <!-- Content Container -->
   <div class="content-container">
-    <div class="h1">
+    <div class="h1"
+         style="width: 100%;">
       Hi, I'm Ben
     </div>
-    <div>
-      I’m a Product Designer.<br>
-      <br>
-      I love building Software, Businesses, and Experiences from conception to optimization.<br>
-      <br>
-      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+    <div class="about-text">
+      I’m a Product Designer.
     </div>
   </div><!-- End Content Container -->
   <!-- Image Wide -->
@@ -65,8 +62,10 @@
        style="width: 100%;"></div><!-- End Image Wide -->
   <!-- Content Container -->
   <div class="content-container">
-    <div>
-      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+    <div class="about-text">
+      I use Design and Code to brings brands and experiences to life.<br>
+      <br>
+      Outside of work, I like to keep a sense of adventure and creative pursuit by staying active and having a Side Project or two.
     </div>
   </div><!-- End Content Container -->
   <!-- Image Wide -->
@@ -81,8 +80,8 @@
     <div class="big-btn spotify">
       View on Spotify
     </div></a> <!-- End Spotify Button -->
-    <div>
-      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+    <div class="about-text">
+      Side Projects include making monthly playlists for friends, learning how to DJ, and creating motion graphics or videos.
     </div>
   </div><!-- End Content Container -->
   <!-- Image Wide -->
@@ -97,8 +96,8 @@
     <div class="big-btn vimeo">
       View on Vimeo
     </div></a> <!-- End Vimeo Button -->
-    <div>
-      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+    <div class="about-text">
+      I believe in the power of design and in what people can build when they come together.
     </div>
   </div><!-- End Content Container -->
   <!-- Image Wide -->
@@ -107,15 +106,15 @@
        style="width: 100%;"></div><!-- End Image Wide -->
   <!-- Content Container -->
   <div class="content-container"
-       style="padding: 0 32px 64px 32px;">
+       style="padding: 64px 32px 128px 32px; max-width: 560px;">
     <a class=""
          href="mailto:btlhart@gmail.com">
     <div class="card-note">
       <div class="h1">
-        Thanks for stopping&nbsp;by.
+        Thanks for stopping&nbsp;by
       </div>
       <div>
-        To talk freelance, collaboration, or air fryers click the link below:
+        To talk freelance or collaboration please click the link below:
       </div>
       <div class="primary-btn top-24 mobile-stretch"
            style="flex: 0 1 280px;">
