--- a/index.html
+++ b/index.html
@@ -213,6 +213,31 @@
         <div class="work-subtitle-h1">
           Early stage tech startup product, brand, and communication design
         </div>
+        <div class="work-thumbnails top-16">
+          <div style="display: flex; justify-content: inherit;">
+            <a class="remesh-link"
+                 data-caption="Remesh — 1"
+                 data-fancybox="gallery"
+                 href="images/remesh-01.png"><img alt=""
+                 class="thumbnails-remesh"
+                 src="images/thumbnail-remesh-01.png"></a> <a class="remesh-link"
+                 data-caption="Remesh — 2"
+                 data-fancybox="gallery"
+                 href="images/remesh-02.png"><img alt=""
+                 class="thumbnails-remesh"
+                 src="images/thumbnail-remesh-02.png"></a> <a class="remesh-link"
+                 data-caption="Remesh — 3"
+                 data-fancybox="gallery"
+                 href="images/remesh-03.png"><img alt=""
+                 class="thumbnails-remesh"
+                 src="images/thumbnail-remesh-03.png"></a> <a class="remesh-link"
+                 data-caption="Remesh — 4"
+                 data-fancybox="gallery"
+                 href="images/remesh-04.png"><img alt=""
+                 class="thumbnails-remesh"
+                 src="images/thumbnail-remesh-04.png"></a>
+          </div>
+        </div>
         <div class="top-56"></div>
       </div>
     </div><!-- End Logrr -->
@@ -284,13 +309,6 @@
                class="thumbnails-img"
                src="images/thumbnail-img-02.png"></a>
         </div>
-        <div style="display: flex;">
-          <a class="mobile-stretch top-24"
-               href="">
-          <div class="primary-btn mobile-stretch">
-            <div class="icon icon-document"></div>View Case Study PDF
-          </div></a>
-        </div>
       </div>
     </div><!-- End IMG -->
     <!-- Concept Work -->
@@ -307,9 +325,6 @@
         <div class="work-header">
           <div class="work-title">
             Concept Work
-          </div>
-          <div class="work-date">
-            2010 - 2014
           </div>
         </div>
         <div class="work-hero"
@@ -337,19 +352,17 @@
                class="thumbnails-concept"
                src="images/thumbnail-concept-01.png"></a>
         </div>
-        <div style="display: flex;">
-          <a class="mobile-stretch top-24"
-               href="">
-          <div class="primary-btn mobile-stretch">
-            <div class="icon icon-document"></div>View Case Study PDF
-          </div></a>
-        </div>
       </div>
     </div><!-- End Concept Work -->
   </div><!-- End Content Container -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.slim.min.js"></script> 
   <script src="jquery.fancybox.min.js"></script> 
   <script>
+
+
+
+
+
 
 
 
