--- a/about.html
+++ b/about.html
@@ -6,6 +6,9 @@
   <link href="jquery.fancybox.min.css"
         rel="stylesheet">
   <title>Ben Hart</title>
+  <link href="images/favicon.png"
+        rel="shortcut icon"
+        type="image/jpg">
   <meta content="width=device-width, initial-scale=1"
         name="viewport">
 </head>
@@ -50,71 +53,35 @@
   <div class="content-container">
     <div class="h1"
          style="width: 100%;">
-      Hi, I'm Ben
+      Ben Hart
+      <div class="about-text"
+           style="font-weight: normal;">
+        Product Designer
+      </div>
     </div>
-    <div class="about-text">
-      I’m a Product Designer.
-    </div>
-  </div><!-- End Content Container -->
-  <!-- Image Wide -->
-  <div class="image-wide"><img alt=""
-       src="images/about-01.png"
-       style="width: 100%;"></div><!-- End Image Wide -->
-  <!-- Content Container -->
-  <div class="content-container">
-    <div class="about-text">
-      I use Design and Code to brings brands and experiences to life.<br>
-      <br>
-      Outside of work, I like to keep a sense of adventure and creative pursuit by staying active and having a Side Project or two.
+    <div class="top-24"
+         style="width: 100%; height: 1px; background-color: #e8e8e8;"></div>
+    <div class="about-text top-48">
+      Ben brings brands, products, and experiences to life using design, code, and deep understanding.
+      <p>Outside of work, Ben likes to keep a sense of adventure and creative pursuit by staying active, having a side project, and continual learning.</p>
+      <p>He believes in design and the power of curious people when they work together.</p>
     </div>
   </div><!-- End Content Container -->
   <!-- Image Wide -->
   <div class="image-wide"><img alt=""
-       src="images/about-02.png"
-       style="width: 100%;"></div><!-- End Image Wide -->
-  <!-- Content Container -->
-  <div class="content-container">
-    <!-- Spotify Button -->
-     <a href="https://open.spotify.com/user/benjaminhart?si=eSYAgSeWSleF3_h7sMdnBQ"
-         style="margin: 0 auto 64px auto;">
-    <div class="big-btn spotify">
-      View on Spotify
-    </div></a> <!-- End Spotify Button -->
-    <div class="about-text">
-      Side Projects include making monthly playlists for friends, learning how to DJ, and creating motion graphics or videos.
-    </div>
-  </div><!-- End Content Container -->
-  <!-- Image Wide -->
-  <div class="image-wide"><img alt=""
-       src="images/about-03.png"
-       style="width: 100%;"></div><!-- End Image Wide -->
-  <!-- Content Container -->
-  <div class="content-container">
-    <!-- Vimeo Button -->
-     <a href="https://vimeo.com/benhart"
-         style="margin: 0 auto 64px auto;">
-    <div class="big-btn vimeo">
-      View on Vimeo
-    </div></a> <!-- End Vimeo Button -->
-    <div class="about-text">
-      I believe in the power of design and in what people can build when they come together.
-    </div>
-  </div><!-- End Content Container -->
-  <!-- Image Wide -->
-  <div class="image-wide"><img alt=""
-       src="images/about-04.png"
+       src="images/about-image.png"
        style="width: 100%;"></div><!-- End Image Wide -->
   <!-- Content Container -->
   <div class="content-container"
-       style="padding: 64px 32px 128px 32px; max-width: 560px;">
+       style="padding: 64px 32px 128px; max-width: 624px;">
     <a class=""
          href="mailto:btlhart@gmail.com">
     <div class="card-note">
       <div class="h1">
         Thanks for stopping&nbsp;by
       </div>
-      <div>
-        To talk freelance or collaboration please click the link below:
+      <div style="font-size: 20px; line-height: 32px; text-align: center;">
+        To reach out, please click the link below:
       </div>
       <div class="primary-btn top-24 mobile-stretch"
            style="flex: 0 1 280px;">
