--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
       </div>
     </div>
     <div>
-      <p>I love building Software, Businesses, and Experiences from conception to optimization.</p>
-      <p>Outside of Components, Guidelines, Code, and a good Business Model Canvas, I believe people and connection matter most.</p>
+      <p>Ben builds Software, Businesses, and Experiences from conception to optimization.</p>
+      <p>Outside of Components, Guidelines, Code, and a good Business Model Canvas, he believes people and connection matter most.</p>
     </div><a class="mobile-stretch"
          href="about.html">
     <div class="primary-btn top-24 mobile-stretch">
@@ -191,8 +191,8 @@
                  src="images/thumbnail-remesh-01.png"
                  style="display: none;">
             <div class="card-note card-prototype">
-              <div class="prototype-cover"
-                   style="background-image: url(images/thumbnail-casestudy.png); height: 360px;"></div>
+              <div class="prototype-casestudy prototype-cover"
+                   style="background-image: url(images/thumbnail-casestudy.png);"></div>
               <div class="primary-btn top-16 mobile-stretch sides-16"
                    style="width: 100%;">
                 <div class="icon icon-document"></div>View Case Study
@@ -409,6 +409,53 @@
         <div class="top-56"></div>
       </div>
     </div><!-- End Techstars -->
+    <!-- University -->
+    <div class="container-timeline">
+      <div class="timeline-ruler">
+        <div class="ruler-badge">
+          &nbsp;
+        </div>
+        <div class="ruler-border">
+          &nbsp;
+        </div>
+      </div>
+      <div class="timeline-work">
+        <div class="work-header">
+          <div class="work-title">
+            University of Oklahoma
+          </div>
+          <div class="work-date">
+            2014
+          </div>
+        </div>
+        <div class="work-hero"
+             style="background-image: url(images/hero-ou.png);">
+          &nbsp;
+        </div>
+        <div class="work-subtitle-h1">
+          Design explorations and concepts
+        </div>
+        <div class="work-thumbnails top-16">
+          <a class="concept-link"
+               data-caption="Concept — 1"
+               data-fancybox="concepts"
+               href="images/concept-01.png"><img alt=""
+               class="thumbnails-concept"
+               src="images/thumbnail-concept-01.png"></a> <a class="concept-link"
+               data-caption="Concept — 2"
+               data-fancybox="concepts"
+               href="images/concept-02.png"><img alt=""
+               class="thumbnails-concept"
+               src="images/thumbnail-concept-01.png"></a> <a class="concept-link"
+               data-caption="Concept — 3"
+               data-fancybox="concepts"
+               href="images/concept-03.png"><img alt=""
+               class="thumbnails-concept"
+               src="images/thumbnail-concept-01.png"></a>
+        </div>
+        <div class="top-56"></div>
+      </div>
+    </div><!-- End University -->
     <!-- Vans -->
     <div class="container-timeline">
       <div class="timeline-ruler">
@@ -435,7 +482,7 @@
         <div class="work-subtitle-h1">
           US Open of Surfing experiential marketing digital activation
         </div>
-        <div class="work-thumbnails top-40">
+        <div class="work-thumbnails top-16">
           <a class="img-link"
                data-caption="IMG — 1"
                data-fancybox="vans"
@@ -450,53 +497,29 @@
         </div>
       </div>
     </div><!-- End Vans -->
-    <!-- Concept Work -->
-    <div class="container-timeline top-64">
-      <div class="timeline-ruler">
-        <div class="ruler-badge">
-          &nbsp;
-        </div>
-        <div class="ruler-border">
-          &nbsp;
-        </div>
-      </div>
-      <div class="timeline-work">
-        <div class="work-header">
-          <div class="work-title">
-            Concepts
-          </div>
-        </div>
-        <div class="work-hero"
-             style="background-image: url(images/hero-concept.png);">
-          &nbsp;
-        </div>
-        <div class="work-subtitle-h1">
-          Design explorations and concepts
-        </div>
-        <div class="work-thumbnails top-40">
-          <a class="concept-link"
-               data-caption="Concept — 1"
-               data-fancybox="concepts"
-               href="images/concept-01.png"><img alt=""
-               class="thumbnails-concept"
-               src="images/thumbnail-concept-01.png"></a> <a class="concept-link"
-               data-caption="Concept — 2"
-               data-fancybox="concepts"
-               href="images/concept-02.png"><img alt=""
-               class="thumbnails-concept"
-               src="images/thumbnail-concept-01.png"></a> <a class="concept-link"
-               data-caption="Concept — 3"
-               data-fancybox="concepts"
-               href="images/concept-03.png"><img alt=""
-               class="thumbnails-concept"
-               src="images/thumbnail-concept-01.png"></a>
-        </div>
-      </div>
-    </div><!-- End Concept Work -->
   </div><!-- End Content Container -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.slim.min.js"></script> 
   <script src="jquery.fancybox.min.js"></script> 
   <script>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
