--- a/about.html
+++ b/about.html
@@ -59,9 +59,7 @@
         Product Designer
       </div>
     </div>
-    <div class="top-24"
-         style="width: 100%; height: 1px; background-color: #e8e8e8;"></div>
-    <div class="about-text top-48">
+    <div class="about-text top-56">
       Ben brings brands, products, and experiences to life using design, code, and deep understanding.
       <p>Outside of work, Ben likes to keep a sense of adventure and creative pursuit by staying active, having a side project, and continual learning.</p>
       <p>He believes in design and the power of curious people when they work together.</p>
@@ -77,11 +75,12 @@
     <a class=""
          href="mailto:btlhart@gmail.com">
     <div class="card-note">
-      <div class="h1">
+      <div class="h1"
+           style="text-align: center;">
         Thanks for stopping&nbsp;by
       </div>
       <div style="font-size: 20px; line-height: 32px; text-align: center;">
-        To reach out, please click the link below:
+        To reach out, please click the link&nbsp;below:
       </div>
       <div class="primary-btn top-24 mobile-stretch"
            style="flex: 0 1 280px;">
