case study slides

--- a/index.html
+++ b/index.html
@@ -184,11 +184,11 @@
         <div class="card-prototype-container top-40">
           <div class="card-prototype-columnns top-24"
                style="width: 100%;">
-            <a data-caption="Remesh — Case Study 1"
+            <a data-caption=""
                  data-fancybox="casestudy"
                  href="images/remesh-casestudy-01.png"><img alt=""
                  class="thumbnails-remesh"
-                 src="images/thumbnail-remesh-01.png"
+                 src="images/remesh-casestudy-01-thumb.png"
                  style="display: none;">
             <div class="card-note card-prototype">
               <div class="prototype-casestudy prototype-cover"
@@ -197,126 +197,121 @@
                    style="width: 100%;">
                 <div class="icon icon-document"></div>View Case Study
               </div>
-            </div></a> <a data-caption="Remesh — Case Study 2"
+            </div></a> <a data-caption=""
                  data-fancybox="casestudy"
                  href="images/remesh-casestudy-02.png"><img alt=""
                  class="thumbnails-remesh"
-                 src="images/thumbnail-remesh-01.png"
-                 style="display: none;"></a> <a data-caption="Remesh — Case Study 3"
+                 src="images/remesh-casestudy-02-thumb.png"
+                 style="display: none;"></a> <a data-caption=""
                  data-fancybox="casestudy"
-                 href="images/remesh-casestudy-02.png"><img alt=""
+                 href="images/remesh-casestudy-03.png"><img alt=""
                  class="thumbnails-remesh"
-                 src="images/thumbnail-remesh-01.png"
-                 style="display: none;"></a> <a data-caption="Remesh — Case Study 4"
+                 src="images/remesh-casestudy-03-thumb.png"
+                 style="display: none;"></a> <a data-caption=""
                  data-fancybox="casestudy"
-                 href="images/remesh-casestudy-02.png"><img alt=""
+                 href="images/remesh-casestudy-04.png"><img alt=""
                  class="thumbnails-remesh"
-                 src="images/thumbnail-remesh-01.png"
-                 style="display: none;"></a> <a data-caption="Remesh — Case Study 5"
+                 src="images/remesh-casestudy-04-thumb.png"
+                 style="display: none;"></a> <a data-caption=""
                  data-fancybox="casestudy"
-                 href="images/remesh-casestudy-02.png"><img alt=""
+                 href="images/remesh-casestudy-05.png"><img alt=""
                  class="thumbnails-remesh"
-                 src="images/thumbnail-remesh-01.png"
-                 style="display: none;"></a> <a data-caption="Remesh — Case Study 6"
+                 src="images/remesh-casestudy-05-thumb.png"
+                 style="display: none;"></a> <a data-caption=""
                  data-fancybox="casestudy"
-                 href="images/remesh-casestudy-02.png"><img alt=""
+                 href="images/remesh-casestudy-06.png"><img alt=""
                  class="thumbnails-remesh"
-                 src="images/thumbnail-remesh-01.png"
-                 style="display: none;"></a> <a data-caption="Remesh — Case Study 7"
+                 src="images/remesh-casestudy-06-thumb.png"
+                 style="display: none;"></a> <a data-caption=""
                  data-fancybox="casestudy"
-                 href="images/remesh-casestudy-02.png"><img alt=""
+                 href="images/remesh-casestudy-07.png"><img alt=""
                  class="thumbnails-remesh"
-                 src="images/thumbnail-remesh-01.png"
-                 style="display: none;"></a> <a data-caption="Remesh — Case Study 8"
+                 src="images/remesh-casestudy-07-thumb.png"
+                 style="display: none;"></a> <a data-caption=""
                  data-fancybox="casestudy"
-                 href="images/remesh-casestudy-02.png"><img alt=""
+                 href="images/remesh-casestudy-08.png"><img alt=""
                  class="thumbnails-remesh"
-                 src="images/thumbnail-remesh-01.png"
-                 style="display: none;"></a> <a data-caption="Remesh — Case Study 9"
+                 src="images/remesh-casestudy-08-thumb.png"
+                 style="display: none;"></a> <a data-caption=""
                  data-fancybox="casestudy"
-                 href="images/remesh-casestudy-02.png"><img alt=""
+                 href="images/remesh-casestudy-09.png"><img alt=""
                  class="thumbnails-remesh"
-                 src="images/thumbnail-remesh-01.png"
-                 style="display: none;"></a> <a data-caption="Remesh — Case Study 10"
+                 src="images/remesh-casestudy-09-thumb.png"
+                 style="display: none;"></a> <a data-caption=""
                  data-fancybox="casestudy"
-                 href="images/remesh-casestudy-02.png"><img alt=""
+                 href="images/remesh-casestudy-10.png"><img alt=""
                  class="thumbnails-remesh"
-                 src="images/thumbnail-remesh-01.png"
-                 style="display: none;"></a> <a data-caption="Remesh — Case Study 11"
+                 src="images/remesh-casestudy-10-thumb.png"
+                 style="display: none;"></a> <a data-caption=""
                  data-fancybox="casestudy"
-                 href="images/remesh-casestudy-02.png"><img alt=""
+                 href="images/remesh-casestudy-11.png"><img alt=""
                  class="thumbnails-remesh"
-                 src="images/thumbnail-remesh-01.png"
-                 style="display: none;"></a> <a data-caption="Remesh — Case Study 12"
+                 src="images/remesh-casestudy-11-thumb.png"
+                 style="display: none;"></a> <a data-caption=""
                  data-fancybox="casestudy"
-                 href="images/remesh-casestudy-02.png"><img alt=""
+                 href="images/remesh-casestudy-12.png"><img alt=""
                  class="thumbnails-remesh"
-                 src="images/thumbnail-remesh-01.png"
-                 style="display: none;"></a> <a data-caption="Remesh — Case Study 13"
+                 src="images/remesh-casestudy-12-thumb.png"
+                 style="display: none;"></a> <a data-caption=""
                  data-fancybox="casestudy"
-                 href="images/remesh-casestudy-02.png"><img alt=""
+                 href="images/remesh-casestudy-13.png"><img alt=""
                  class="thumbnails-remesh"
-                 src="images/thumbnail-remesh-01.png"
-                 style="display: none;"></a> <a data-caption="Remesh — Case Study 14"
+                 src="images/remesh-casestudy-13-thumb.png"
+                 style="display: none;"></a> <a data-caption=""
                  data-fancybox="casestudy"
-                 href="images/remesh-casestudy-02.png"><img alt=""
+                 href="images/remesh-casestudy-14.png"><img alt=""
                  class="thumbnails-remesh"
-                 src="images/thumbnail-remesh-01.png"
-                 style="display: none;"></a> <a data-caption="Remesh — Case Study 15"
+                 src="images/remesh-casestudy-14-thumb.png"
+                 style="display: none;"></a> <a data-caption=""
                  data-fancybox="casestudy"
-                 href="images/remesh-casestudy-02.png"><img alt=""
+                 href="images/remesh-casestudy-15.png"><img alt=""
                  class="thumbnails-remesh"
-                 src="images/thumbnail-remesh-01.png"
-                 style="display: none;"></a> <a data-caption="Remesh — Case Study 16"
+                 src="images/remesh-casestudy-15-thumb.png"
+                 style="display: none;"></a> <a data-caption=""
                  data-fancybox="casestudy"
-                 href="images/remesh-casestudy-02.png"><img alt=""
+                 href="images/remesh-casestudy-16.png"><img alt=""
                  class="thumbnails-remesh"
-                 src="images/thumbnail-remesh-01.png"
-                 style="display: none;"></a> <a data-caption="Remesh — Case Study 17"
+                 src="images/remesh-casestudy-16-thumb.png"
+                 style="display: none;"></a> <a data-caption=""
                  data-fancybox="casestudy"
-                 href="images/remesh-casestudy-02.png"><img alt=""
+                 href="images/remesh-casestudy-17.png"><img alt=""
                  class="thumbnails-remesh"
-                 src="images/thumbnail-remesh-01.png"
-                 style="display: none;"></a> <a data-caption="Remesh — Case Study 18"
+                 src="images/remesh-casestudy-17-thumb.png"
+                 style="display: none;"></a> <a data-caption=""
                  data-fancybox="casestudy"
-                 href="images/remesh-casestudy-02.png"><img alt=""
+                 href="images/remesh-casestudy-18.png"><img alt=""
                  class="thumbnails-remesh"
-                 src="images/thumbnail-remesh-01.png"
-                 style="display: none;"></a> <a data-caption="Remesh — Case Study 19"
+                 src="images/remesh-casestudy-18-thumb.png"
+                 style="display: none;"></a> <a data-caption=""
                  data-fancybox="casestudy"
-                 href="images/remesh-casestudy-02.png"><img alt=""
+                 href="images/remesh-casestudy-19.png"><img alt=""
                  class="thumbnails-remesh"
-                 src="images/thumbnail-remesh-01.png"
-                 style="display: none;"></a> <a data-caption="Remesh — Case Study 20"
+                 src="images/remesh-casestudy-19-thumb.png"
+                 style="display: none;"></a> <a data-caption=""
                  data-fancybox="casestudy"
-                 href="images/remesh-casestudy-02.png"><img alt=""
+                 href="images/remesh-casestudy-20.png"><img alt=""
                  class="thumbnails-remesh"
-                 src="images/thumbnail-remesh-01.png"
-                 style="display: none;"></a> <a data-caption="Remesh — Case Study 21"
+                 src="images/remesh-casestudy-20-thumb.png"
+                 style="display: none;"></a> <a data-caption=""
                  data-fancybox="casestudy"
-                 href="images/remesh-casestudy-02.png"><img alt=""
+                 href="images/remesh-casestudy-21.png"><img alt=""
                  class="thumbnails-remesh"
-                 src="images/thumbnail-remesh-01.png"
-                 style="display: none;"></a> <a data-caption="Remesh — Case Study 22"
+                 src="images/remesh-casestudy-21-thumb.png"
+                 style="display: none;"></a> <a data-caption=""
                  data-fancybox="casestudy"
-                 href="images/remesh-casestudy-02.png"><img alt=""
+                 href="images/remesh-casestudy-22.png"><img alt=""
                  class="thumbnails-remesh"
-                 src="images/thumbnail-remesh-01.png"
-                 style="display: none;"></a> <a data-caption="Remesh — Case Study 23"
+                 src="images/remesh-casestudy-22-thumb.png"
+                 style="display: none;"></a> <a data-caption=""
                  data-fancybox="casestudy"
-                 href="images/remesh-casestudy-02.png"><img alt=""
+                 href="images/remesh-casestudy-23.png"><img alt=""
                  class="thumbnails-remesh"
-                 src="images/thumbnail-remesh-01.png"
-                 style="display: none;"></a> <a data-caption="Remesh — Case Study 24"
+                 src="images/remesh-casestudy-23-thumb.png"
+                 style="display: none;"></a> <a data-caption=""
                  data-fancybox="casestudy"
-                 href="images/remesh-casestudy-02.png"><img alt=""
+                 href="images/remesh-casestudy-24.png"><img alt=""
                  class="thumbnails-remesh"
-                 src="images/thumbnail-remesh-01.png"
-                 style="display: none;"></a> <a data-caption="Remesh — Case Study 25"
-                 data-fancybox="casestudy"
-                 href="images/remesh-casestudy-02.png"><img alt=""
-                 class="thumbnails-remesh"
-                 src="images/thumbnail-remesh-01.png"
+                 src="images/remesh-casestudy-24-thumb.png"
                  style="display: none;"></a>
             <div class="work-subtitle-h2 top-16">
               <b>Designing Remesh</b> — From MVP to Product Market Fit
@@ -501,6 +496,14 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.slim.min.js"></script> 
   <script src="jquery.fancybox.min.js"></script> 
   <script>
+
+
+
+
+
+
+
+
 
 
 
