--- a/index.html
+++ b/index.html
@@ -104,22 +104,22 @@
         <div class="work-thumbnails top-16">
           <div style="display: flex; justify-content: inherit;">
             <a class="remesh-link"
-                 data-caption="Remesh — 1"
+                 data-caption=""
                  data-fancybox="remesh"
                  href="images/remesh-01.png"><img alt=""
                  class="thumbnails-remesh"
                  src="images/thumbnail-remesh-01.png"></a> <a class="remesh-link"
-                 data-caption="Remesh — 2"
+                 data-caption=""
                  data-fancybox="remesh"
                  href="images/remesh-02.png"><img alt=""
                  class="thumbnails-remesh"
                  src="images/thumbnail-remesh-02.png"></a> <a class="remesh-link"
-                 data-caption="Remesh — 3"
+                 data-caption=""
                  data-fancybox="remesh"
                  href="images/remesh-03.png"><img alt=""
                  class="thumbnails-remesh"
                  src="images/thumbnail-remesh-03.png"></a> <a class="remesh-link"
-                 data-caption="Remesh — 4"
+                 data-caption=""
                  data-fancybox="remesh"
                  href="images/remesh-04.png"><img alt=""
                  class="thumbnails-remesh"
@@ -127,22 +127,22 @@
           </div>
           <div style="display: flex; justify-content: inherit; margin-top: 4%; width: 100%;">
             <a class="remesh-link"
-                 data-caption="Remesh — 5"
+                 data-caption=""
                  data-fancybox="remesh"
                  href="images/remesh-05.png"><img alt=""
                  class="thumbnails-remesh"
                  src="images/thumbnail-remesh-05.png"></a> <a class="remesh-link"
-                 data-caption="Remesh — 6"
+                 data-caption=""
                  data-fancybox="remesh"
                  href="images/remesh-06.png"><img alt=""
                  class="thumbnails-remesh"
                  src="images/thumbnail-remesh-06.png"></a> <a class="remesh-link"
-                 data-caption="Remesh — 7"
+                 data-caption=""
                  data-fancybox="remesh"
                  href="images/remesh-07.png"><img alt=""
                  class="thumbnails-remesh"
                  src="images/thumbnail-remesh-07.png"></a> <a class="remesh-link"
-                 data-caption="Remesh — 8"
+                 data-caption=""
                  data-fancybox="remesh"
                  href="images/remesh-08.png"><img alt=""
                  class="thumbnails-remesh"
@@ -350,22 +350,22 @@
         <div class="work-thumbnails top-16">
           <div style="display: flex; justify-content: inherit;">
             <a class="remesh-link"
-                 data-caption="Logrr — 1"
+                 data-caption=""
                  data-fancybox="logrr"
                  href="images/remesh-01.png"><img alt=""
                  class="thumbnails-remesh"
                  src="images/thumbnail-remesh-01.png"></a> <a class="remesh-link"
-                 data-caption="Logrr — 2"
+                 data-caption=""
                  data-fancybox="logrr"
                  href="images/remesh-02.png"><img alt=""
                  class="thumbnails-remesh"
                  src="images/thumbnail-remesh-02.png"></a> <a class="remesh-link"
-                 data-caption="Logrr — 3"
+                 data-caption=""
                  data-fancybox="logrr"
                  href="images/remesh-03.png"><img alt=""
                  class="thumbnails-remesh"
                  src="images/thumbnail-remesh-03.png"></a> <a class="remesh-link"
-                 data-caption="Logrr — 4"
+                 data-caption=""
                  data-fancybox="logrr"
                  href="images/remesh-04.png"><img alt=""
                  class="thumbnails-remesh"
@@ -432,17 +432,17 @@
         </div>
         <div class="work-thumbnails top-16">
           <a class="concept-link"
-               data-caption="Concept — 1"
+               data-caption=""
                data-fancybox="concepts"
                href="images/concept-01.png"><img alt=""
                class="thumbnails-concept"
                src="images/thumbnail-concept-01.png"></a> <a class="concept-link"
-               data-caption="Concept — 2"
+               data-caption=""
                data-fancybox="concepts"
                href="images/concept-02.png"><img alt=""
                class="thumbnails-concept"
                src="images/thumbnail-concept-01.png"></a> <a class="concept-link"
-               data-caption="Concept — 3"
+               data-caption=""
                data-fancybox="concepts"
                href="images/concept-03.png"><img alt=""
                class="thumbnails-concept"
@@ -479,12 +479,12 @@
         </div>
         <div class="work-thumbnails top-16">
           <a class="img-link"
-               data-caption="IMG — 1"
+               data-caption=""
                data-fancybox="vans"
                href="images/img-01.png"><img alt=""
                class="thumbnails-img"
                src="images/thumbnail-img-01.png"></a> <a class="img-link"
-               data-caption="IMG — 2"
+               data-caption=""
                data-fancybox="vans"
                href="images/img-02.png"><img alt=""
                class="thumbnails-img"
@@ -496,6 +496,8 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.slim.min.js"></script> 
   <script src="jquery.fancybox.min.js"></script> 
   <script>
+
+
 
 
 
