--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
       </div>
     </div>
     <div>
-      <p>Ben builds Software, Businesses, and Experiences from conception to optimization.</p>
-      <p>Outside of Components, Guidelines, Code, and a good Business Model Canvas, he believes people and connection matter most.</p>
+      <p>Ben builds software, businesses, and experiences from conception to optimization.</p>
+      <p>Outside of components, guidelines, code and a good business model canvas, he believes people and connection matter most.</p>
     </div><a class="mobile-stretch"
          href="about.html">
     <div class="primary-btn top-24 mobile-stretch">
@@ -428,7 +428,7 @@
           &nbsp;
         </div>
         <div class="work-subtitle-h1">
-          Design explorations and concepts
+          Design explorations and concepts from time at University
         </div>
         <div class="work-thumbnails top-16">
           <a class="concept-link"
@@ -496,6 +496,9 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.slim.min.js"></script> 
   <script src="jquery.fancybox.min.js"></script> 
   <script>
+
+
+
 
 
 
