--- a/index.html
+++ b/index.html
@@ -352,9 +352,9 @@
             <a class="remesh-link"
                  data-caption=""
                  data-fancybox="logrr"
-                 href="images/remesh-01.png"><img alt=""
+                 href="images/logrr-01.png"><img alt=""
                  class="thumbnails-remesh"
-                 src="images/thumbnail-remesh-01.png"></a> <a class="remesh-link"
+                 src="images/logrr-01-thumb.png"></a> <a class="remesh-link"
                  data-caption=""
                  data-fancybox="logrr"
                  href="images/remesh-02.png"><img alt=""
@@ -496,6 +496,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.slim.min.js"></script> 
   <script src="jquery.fancybox.min.js"></script> 
   <script>
+
 
 
 
